fix bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2256,6 +2256,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    align-items: center;
 }
 
 #services .services-list .service-item {
@@ -2313,6 +2314,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     }
     #services .services-content {
         max-width: 550px;
+    }
+    #services .services-list {
+        flex-direction: column;
+    }
+    #services .services-list .service-item {
+        width: 90%;
     }
     #services .services-list .icon i {
         font-size: 5.1rem;
